updating the docker file with new java env variables